Fix fonts on Safari

--- a/src/components/feature-slider/style.sass
+++ b/src/components/feature-slider/style.sass
@@ -30,7 +30,7 @@
     padding: 3px 0
 
     .item
-      font-family: 'Nunito Sans'
+      font-family: $font-nunito
       font-size: 16px
       transition: opacity .25s
       cursor: pointer
