--- a/src/styles/fonts.sass
+++ b/src/styles/fonts.sass
@@ -1,6 +1,6 @@
 @import url('https://use.typekit.net/iqj5hix.css') // Lato and Nunito Sans
 @import url('https://cdn.rawgit.com/tonsky/FiraCode/1.204/distr/fira_code.css')
 
-$font-lato: 'Lato', sans-serif
-$font-nunito: 'Nunito Sans', sans-serif
+$font-lato: 'lato', sans-serif
+$font-nunito: 'nunito-sans', sans-serif
 $font-mono: 'Fira Code', monospace
